src/front/y.output
Grammar

    0 $accept: Program $end

    1 Program: CompUnit

    2 CompUnit: CompUnit Decl
    3         | CompUnit FuncDef
    4         | Decl
    5         | FuncDef

    6 Decl: ConstDecl SEMICOLON
    7     | VarDecl SEMICOLON

    8 ConstDecl: CONST BType ConstDef
    9          | ConstDecl COMMA ConstDef

   10 BType: INTT
   11      | FLOATT

   12 ConstDef: IDENT ASSIGNN ConstInitVal
   13         | IDENT ArrayOpt ASSIGNN ConstInitArray

   14 ArrayOpt: LBRACKET ConstExp RBRACKET
   15         | ArrayOpt LBRACKET ConstExp RBRACKET

   16 ConstInitVal: ConstExp

   17 ConstInitArray: LBRACE RBRACE
   18               | LBRACE ConstArrayBody RBRACE

   19 ConstArrayBody: ConstArrayBody COMMA ConstInitArray
   20               | ConstArrayBody COMMA ConstInitVal
   21               | ConstInitArray
   22               | ConstInitVal

   23 VarDecl: BType VarDef
   24        | VarDecl COMMA VarDef

   25 VarDef: IDENT
   26       | IDENT ArrayOpt
   27       | IDENT ASSIGNN InitVal
   28       | IDENT ArrayOpt InitArray

   29 InitVal: Exp

   30 InitArray: LBRACE RBRACE
   31          | LBRACE InitArrayBody RBRACE

   32 InitArrayBody: InitArrayBody COMMA InitArray
   33              | InitArrayBody COMMA InitVal
   34              | InitArray
   35              | InitVal

   36 FuncDef: BType IDENT LPAREN FuncFParams RPAREN Block
   37        | BType IDENT LPAREN RPAREN Block
   38        | VOIDD IDENT LPAREN FuncFParams RPAREN Block
   39        | VOIDD IDENT LPAREN RPAREN Block

   40 FuncFParams: FuncFParam COMMA FuncFParam
   41            | FuncFParam

   42 FuncFParam: BType IDENT
   43           | BType IDENT ArrayOpt

   44 Block: LBRACE BlockItems RBRACE
   45      | LBRACE RBRACE

   46 BlockItems: BlockItem
   47           | BlockItems BlockItem

   48 BlockItem: Decl
   49          | Stmt

   50 Stmt: LVal ASSIGNN Exp SEMICOLON
   51     | Exp SEMICOLON
   52     | SEMICOLON
   53     | Block
   54     | IfStmt
   55     | WhileStmt
   56     | BreakStmt
   57     | ContinueStmt
   58     | ReturnStmt

   59 IfStmt: IF LPAREN Cond RPAREN Stmt
   60       | IF LPAREN Cond RPAREN Stmt ELSE Stmt

   61 WhileStmt: WHILE LPAREN Cond RPAREN Stmt

   62 BreakStmt: BREAK SEMICOLON

   63 ContinueStmt: CONTINUE SEMICOLON

   64 ReturnStmt: RETURN Exp SEMICOLON
   65           | RETURN SEMICOLON

   66 Exp: AddExp

   67 Cond: LOrExp

   68 LVal: IDENT
   69     | LVal LBRACKET Exp RBRACKET

   70 PrimaryExp: LPAREN Exp RPAREN
   71           | LVal
   72           | Number

   73 Number: INT_CONST
   74       | FLOAT_CONST

   75 UnaryExp: PrimaryExp
   76         | FuncCall
   77         | UnaryOp UnaryExp

   78 FuncCall: IDENT LPAREN FuncRParams RPAREN
   79         | IDENT LPAREN RPAREN

   80 UnaryOp: ADDD
   81        | SUBB
   82        | NOTT

   83 FuncRParams: Exp
   84            | FuncRParams COMMA Exp

   85 MulExp: UnaryExp
   86       | MulExp MulOp UnaryExp

   87 MulOp: MULL
   88      | DIVV
   89      | MODD

   90 AddExp: MulExp
   91       | AddExp AddOp MulExp

   92 AddOp: ADDD
   93      | SUBB

   94 RelExp: AddExp
   95       | RelExp RelOp AddExp

   96 RelOp: GTT
   97      | GEQQ
   98      | LTT
   99      | LEQQ

  100 EqExp: RelExp
  101      | EqExp EQQ RelExp
  102      | EqExp NEQQ RelExp

  103 LAndExp: EqExp
  104        | LAndExp ANDD EqExp

  105 LOrExp: LAndExp
  106       | LOrExp ORR LAndExp

  107 ConstExp: AddExp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENT <name> (258) 12 13 25 26 27 28 36 37 38 39 42 43 68 78 79
    INT_CONST <data> (259) 73
    FLOAT_CONST <data> (260) 74
    CONST (261) 8
    INTT (262) 10
    FLOATT (263) 11
    COMMA (264) 9 19 20 24 32 33 40 84
    SEMICOLON (265) 6 7 50 51 52 62 63 64 65
    LBRACE (266) 17 18 30 31 44 45
    RBRACE (267) 17 18 30 31 44 45
    LBRACKET (268) 14 15 69
    RBRACKET (269) 14 15 69
    LPAREN (270) 36 37 38 39 59 60 61 70 78 79
    RPAREN (271) 36 37 38 39 59 60 61 70 78 79
    ASSIGNN (272) 12 13 27 50
    VOIDD (273) 38 39
    IF (274) 59 60
    ELSE (275) 60
    WHILE (276) 61
    BREAK (277) 62
    CONTINUE (278) 63
    RETURN (279) 64 65
    ADDD <op> (280) 80 92
    SUBB <op> (281) 81 93
    MULL <op> (282) 87
    DIVV <op> (283) 88
    MODD <op> (284) 89
    GTT <op> (285) 96
    GEQQ <op> (286) 97
    LTT <op> (287) 98
    LEQQ <op> (288) 99
    EQQ <op> (289) 101
    NEQQ <op> (290) 102
    ANDD <op> (291) 104
    ORR <op> (292) 106
    NOTT <op> (293) 82
    LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    Program (41)
        on left: 1
        on right: 0
    CompUnit <compUnit> (42)
        on left: 2 3 4 5
        on right: 1 2 3
    Decl <stmt> (43)
        on left: 6 7
        on right: 2 4 48
    ConstDecl <stmt> (44)
        on left: 8 9
        on right: 6 9
    BType <type> (45)
        on left: 10 11
        on right: 8 23 36 37 42 43
    ConstDef <stmt> (46)
        on left: 12 13
        on right: 8 9
    ArrayOpt (47)
        on left: 14 15
        on right: 13 15 26 28 43
    ConstInitVal (48)
        on left: 16
        on right: 12 20 22
    ConstInitArray (49)
        on left: 17 18
        on right: 13 19 21
    ConstArrayBody (50)
        on left: 19 20 21 22
        on right: 18 19 20
    VarDecl <stmt> (51)
        on left: 23 24
        on right: 7 24
    VarDef <stmt> (52)
        on left: 25 26 27 28
        on right: 23 24
    InitVal <stmt> (53)
        on left: 29
        on right: 27 33 35
    InitArray (54)
        on left: 30 31
        on right: 28 32 34
    InitArrayBody (55)
        on left: 32 33 34 35
        on right: 31 32 33
    FuncDef <stmt> (56)
        on left: 36 37 38 39
        on right: 3 5
    FuncFParams <stmt> (57)
        on left: 40 41
        on right: 36 38
    FuncFParam <stmt> (58)
        on left: 42 43
        on right: 40 41
    Block <stmt> (59)
        on left: 44 45
        on right: 36 37 38 39 53
    BlockItems <stmt> (60)
        on left: 46 47
        on right: 44 47
    BlockItem <stmt> (61)
        on left: 48 49
        on right: 46 47
    Stmt <stmt> (62)
        on left: 50 51 52 53 54 55 56 57 58
        on right: 49 59 60 61
    IfStmt <stmt> (63)
        on left: 59 60
        on right: 54
    WhileStmt <stmt> (64)
        on left: 61
        on right: 55
    BreakStmt <stmt> (65)
        on left: 62
        on right: 56
    ContinueStmt <stmt> (66)
        on left: 63
        on right: 57
    ReturnStmt <stmt> (67)
        on left: 64 65
        on right: 58
    Exp <stmt> (68)
        on left: 66
        on right: 29 50 51 64 69 70 83 84
    Cond <stmt> (69)
        on left: 67
        on right: 59 60 61
    LVal <stmt> (70)
        on left: 68 69
        on right: 50 69 71
    PrimaryExp <stmt> (71)
        on left: 70 71 72
        on right: 75
    Number <stmt> (72)
        on left: 73 74
        on right: 72
    UnaryExp <stmt> (73)
        on left: 75 76 77
        on right: 77 85 86
    FuncCall <stmt> (74)
        on left: 78 79
        on right: 76
    UnaryOp <op> (75)
        on left: 80 81 82
        on right: 77
    FuncRParams <stmt> (76)
        on left: 83 84
        on right: 78 84
    MulExp <stmt> (77)
        on left: 85 86
        on right: 86 90 91
    MulOp <op> (78)
        on left: 87 88 89
        on right: 86
    AddExp <stmt> (79)
        on left: 90 91
        on right: 66 91 94 95 107
    AddOp <op> (80)
        on left: 92 93
        on right: 91
    RelExp <stmt> (81)
        on left: 94 95
        on right: 95 100 101 102
    RelOp <op> (82)
        on left: 96 97 98 99
        on right: 95
    EqExp <stmt> (83)
        on left: 100 101 102
        on right: 101 102 103 104
    LAndExp <stmt> (84)
        on left: 103 104
        on right: 104 105 106
    LOrExp <stmt> (85)
        on left: 105 106
        on right: 67 106
    ConstExp (86)
        on left: 107
        on right: 14 15 16


State 0

    0 $accept: • Program $end

    CONST   shift, and go to state 1
    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3
    VOIDD   shift, and go to state 4

    Program    go to state 5
    CompUnit   go to state 6
    Decl       go to state 7
    ConstDecl  go to state 8
    BType      go to state 9
    VarDecl    go to state 10
    FuncDef    go to state 11


State 1

    8 ConstDecl: CONST • BType ConstDef

    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3

    BType  go to state 12


State 2

   10 BType: INTT •

    $default  reduce using rule 10 (BType)


State 3

   11 BType: FLOATT •

    $default  reduce using rule 11 (BType)


State 4

   38 FuncDef: VOIDD • IDENT LPAREN FuncFParams RPAREN Block
   39        | VOIDD • IDENT LPAREN RPAREN Block

    IDENT  shift, and go to state 13


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 6

    1 Program: CompUnit •
    2 CompUnit: CompUnit • Decl
    3         | CompUnit • FuncDef

    CONST   shift, and go to state 1
    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3
    VOIDD   shift, and go to state 4

    $default  reduce using rule 1 (Program)

    Decl       go to state 15
    ConstDecl  go to state 8
    BType      go to state 9
    VarDecl    go to state 10
    FuncDef    go to state 16


State 7

    4 CompUnit: Decl •

    $default  reduce using rule 4 (CompUnit)


State 8

    6 Decl: ConstDecl • SEMICOLON
    9 ConstDecl: ConstDecl • COMMA ConstDef

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 9

   23 VarDecl: BType • VarDef
   36 FuncDef: BType • IDENT LPAREN FuncFParams RPAREN Block
   37        | BType • IDENT LPAREN RPAREN Block

    IDENT  shift, and go to state 19

    VarDef  go to state 20


State 10

    7 Decl: VarDecl • SEMICOLON
   24 VarDecl: VarDecl • COMMA VarDef

    COMMA      shift, and go to state 21
    SEMICOLON  shift, and go to state 22


State 11

    5 CompUnit: FuncDef •

    $default  reduce using rule 5 (CompUnit)


State 12

    8 ConstDecl: CONST BType • ConstDef

    IDENT  shift, and go to state 23

    ConstDef  go to state 24


State 13

   38 FuncDef: VOIDD IDENT • LPAREN FuncFParams RPAREN Block
   39        | VOIDD IDENT • LPAREN RPAREN Block

    LPAREN  shift, and go to state 25


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 CompUnit: CompUnit Decl •

    $default  reduce using rule 2 (CompUnit)


State 16

    3 CompUnit: CompUnit FuncDef •

    $default  reduce using rule 3 (CompUnit)


State 17

    9 ConstDecl: ConstDecl COMMA • ConstDef

    IDENT  shift, and go to state 23

    ConstDef  go to state 26


State 18

    6 Decl: ConstDecl SEMICOLON •

    $default  reduce using rule 6 (Decl)


State 19

   25 VarDef: IDENT •
   26       | IDENT • ArrayOpt
   27       | IDENT • ASSIGNN InitVal
   28       | IDENT • ArrayOpt InitArray
   36 FuncDef: BType IDENT • LPAREN FuncFParams RPAREN Block
   37        | BType IDENT • LPAREN RPAREN Block

    LBRACKET  shift, and go to state 27
    LPAREN    shift, and go to state 28
    ASSIGNN   shift, and go to state 29

    $default  reduce using rule 25 (VarDef)

    ArrayOpt  go to state 30


State 20

   23 VarDecl: BType VarDef •

    $default  reduce using rule 23 (VarDecl)


State 21

   24 VarDecl: VarDecl COMMA • VarDef

    IDENT  shift, and go to state 31

    VarDef  go to state 32


State 22

    7 Decl: VarDecl SEMICOLON •

    $default  reduce using rule 7 (Decl)


State 23

   12 ConstDef: IDENT • ASSIGNN ConstInitVal
   13         | IDENT • ArrayOpt ASSIGNN ConstInitArray

    LBRACKET  shift, and go to state 27
    ASSIGNN   shift, and go to state 33

    ArrayOpt  go to state 34


State 24

    8 ConstDecl: CONST BType ConstDef •

    $default  reduce using rule 8 (ConstDecl)


State 25

   38 FuncDef: VOIDD IDENT LPAREN • FuncFParams RPAREN Block
   39        | VOIDD IDENT LPAREN • RPAREN Block

    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3
    RPAREN  shift, and go to state 35

    BType        go to state 36
    FuncFParams  go to state 37
    FuncFParam   go to state 38


State 26

    9 ConstDecl: ConstDecl COMMA ConstDef •

    $default  reduce using rule 9 (ConstDecl)


State 27

   14 ArrayOpt: LBRACKET • ConstExp RBRACKET

    IDENT        shift, and go to state 39
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41
    LPAREN       shift, and go to state 42
    ADDD         shift, and go to state 43
    SUBB         shift, and go to state 44
    NOTT         shift, and go to state 45

    LVal        go to state 46
    PrimaryExp  go to state 47
    Number      go to state 48
    UnaryExp    go to state 49
    FuncCall    go to state 50
    UnaryOp     go to state 51
    MulExp      go to state 52
    AddExp      go to state 53
    ConstExp    go to state 54


State 28

   36 FuncDef: BType IDENT LPAREN • FuncFParams RPAREN Block
   37        | BType IDENT LPAREN • RPAREN Block

    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3
    RPAREN  shift, and go to state 55

    BType        go to state 36
    FuncFParams  go to state 56
    FuncFParam   go to state 38


State 29

   27 VarDef: IDENT ASSIGNN • InitVal

    IDENT        shift, and go to state 39
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41
    LPAREN       shift, and go to state 42
    ADDD         shift, and go to state 43
    SUBB         shift, and go to state 44
    NOTT         shift, and go to state 45

    InitVal     go to state 57
    Exp         go to state 58
    LVal        go to state 46
    PrimaryExp  go to state 47
    Number      go to state 48
    UnaryExp    go to state 49
    FuncCall    go to state 50
    UnaryOp     go to state 51
    MulExp      go to state 52
    AddExp      go to state 59


State 30

   15 ArrayOpt: ArrayOpt • LBRACKET ConstExp RBRACKET
   26 VarDef: IDENT ArrayOpt •
   28       | IDENT ArrayOpt • InitArray

    LBRACE    shift, and go to state 60
    LBRACKET  shift, and go to state 61

    $default  reduce using rule 26 (VarDef)

    InitArray  go to state 62


State 31

   25 VarDef: IDENT •
   26       | IDENT • ArrayOpt
   27       | IDENT • ASSIGNN InitVal
   28       | IDENT • ArrayOpt InitArray

    LBRACKET  shift, and go to state 27
    ASSIGNN   shift, and go to state 29

    $default  reduce using rule 25 (VarDef)

    ArrayOpt  go to state 30


State 32

   24 VarDecl: VarDecl COMMA VarDef •

    $default  reduce using rule 24 (VarDecl)


State 33

   12 ConstDef: IDENT ASSIGNN • ConstInitVal

    IDENT        shift, and go to state 39
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41
    LPAREN       shift, and go to state 42
    ADDD         shift, and go to state 43
    SUBB         shift, and go to state 44
    NOTT         shift, and go to state 45

    ConstInitVal  go to state 63
    LVal          go to state 46
    PrimaryExp    go to state 47
    Number        go to state 48
    UnaryExp      go to state 49
    FuncCall      go to state 50
    UnaryOp       go to state 51
    MulExp        go to state 52
    AddExp        go to state 53
    ConstExp      go to state 64


State 34

   13 ConstDef: IDENT ArrayOpt • ASSIGNN ConstInitArray
   15 ArrayOpt: ArrayOpt • LBRACKET ConstExp RBRACKET

    LBRACKET  shift, and go to state 61
    ASSIGNN   shift, and go to state 65


State 35

   39 FuncDef: VOIDD IDENT LPAREN RPAREN • Block

    LBRACE  shift, and go to state 66

    Block  go to state 67


State 36

   42 FuncFParam: BType • IDENT
   43           | BType • IDENT ArrayOpt

    IDENT  shift, and go to state 68


State 37

   38 FuncDef: VOIDD IDENT LPAREN FuncFParams • RPAREN Block

    RPAREN  shift, and go to state 69


State 38

   40 FuncFParams: FuncFParam • COMMA FuncFParam
   41            | FuncFParam •

    COMMA  shift, and go to state 70

    $default  reduce using rule 41 (FuncFParams)


State 39

   68 LVal: IDENT •
   78 FuncCall: IDENT • LPAREN FuncRParams RPAREN
   79         | IDENT • LPAREN RPAREN

    LPAREN  shift, and go to state 71

    $default  reduce using rule 68 (LVal)


State 40

   73 Number: INT_CONST •

    $default  reduce using rule 73 (Number)


State 41

   74 Number: FLOAT_CONST •

    $default  reduce using rule 74 (Number)


State 42

   70 PrimaryExp: LPAREN • Exp RPAREN

    IDENT        shift, and go to state 39
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41
    LPAREN       shift, and go to state 42
    ADDD         shift, and go to state 43
    SUBB         shift, and go to state 44
    NOTT         shift, and go to state 45

    Exp         go to state 72
    LVal        go to state 46
    PrimaryExp  go to state 47
    Number      go to state 48
    UnaryExp    go to state 49
    FuncCall    go to state 50
    UnaryOp     go to state 51
    MulExp      go to state 52
    AddExp      go to state 59


State 43

   80 UnaryOp: ADDD •

    $default  reduce using rule 80 (UnaryOp)


State 44

   81 UnaryOp: SUBB •

    $default  reduce using rule 81 (UnaryOp)


State 45

   82 UnaryOp: NOTT •

    $default  reduce using rule 82 (UnaryOp)


State 46

   69 LVal: LVal • LBRACKET Exp RBRACKET
   71 PrimaryExp: LVal •

    LBRACKET  shift, and go to state 73

    $default  reduce using rule 71 (PrimaryExp)


State 47

   75 UnaryExp: PrimaryExp •

    $default  reduce using rule 75 (UnaryExp)


State 48

   72 PrimaryExp: Number •

    $default  reduce using rule 72 (PrimaryExp)


State 49

   85 MulExp: UnaryExp •

    $default  reduce using rule 85 (MulExp)


State 50

   76 UnaryExp: FuncCall •

    $default  reduce using rule 76 (UnaryExp)


State 51

   77 UnaryExp: UnaryOp • UnaryExp

    IDENT        shift, and go to state 39
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41
    LPAREN       shift, and go to state 42
    ADDD         shift, and go to state 43
    SUBB         shift, and go to state 44
    NOTT         shift, and go to state 45

    LVal        go to state 46
    PrimaryExp  go to state 47
    Number      go to state 48
    UnaryExp    go to state 74
    FuncCall    go to state 50
    UnaryOp     go to state 51


State 52

   86 MulExp: MulExp • MulOp UnaryExp
   90 AddExp: MulExp •

    MULL  shift, and go to state 75
    DIVV  shift, and go to state 76
    MODD  shift, and go to state 77

    $default  reduce using rule 90 (AddExp)

    MulOp  go to state 78


State 53

   91 AddExp: AddExp • AddOp MulExp
  107 ConstExp: AddExp •

    ADDD  shift, and go to state 79
    SUBB  shift, and go to state 80

    $default  reduce using rule 107 (ConstExp)

    AddOp  go to state 81


State 54

   14 ArrayOpt: LBRACKET ConstExp • RBRACKET

    RBRACKET  shift, and go to state 82


State 55

   37 FuncDef: BType IDENT LPAREN RPAREN • Block

    LBRACE  shift, and go to state 66

    Block  go to state 83


State 56

   36 FuncDef: BType IDENT LPAREN FuncFParams • RPAREN Block

    RPAREN  shift, and go to state 84


State 57

   27 VarDef: IDENT ASSIGNN InitVal •

    $default  reduce using rule 27 (VarDef)


State 58

   29 InitVal: Exp •

    $default  reduce using rule 29 (InitVal)


State 59

   66 Exp: AddExp •
   91 AddExp: AddExp • AddOp MulExp

    ADDD  shift, and go to state 79
    SUBB  shift, and go to state 80

    $default  reduce using rule 66 (Exp)

    AddOp  go to state 81


State 60

   30 InitArray: LBRACE • RBRACE
   31          | LBRACE • InitArrayBody RBRACE
